listing component magnitudes as ordered lists

--- a/feature_extract.ipynb
+++ b/feature_extract.ipynb
@@ -957,11 +957,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectral_features = [spectral_centroids,\n",
+    "spectral_features = [\n",
+    "rms,\n",
+    "spectral_centroids,\n",
     "spectral_bandwidth_2,\n",
     "spectral_rolloff,\n",
     "spectral_novelty,\n",
@@ -970,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,16 +983,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24, 7383)"
+       "(25, 7383)"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,21 +1005,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "features 0-19 are MFCCs, after which:\n",
+    "* index 20: RMS\n",
+    "* index 21: spectral centroid\n",
+    "* index 22: spectral bandwidth\n",
+    "* index 23: spectral rolloff\n",
+    "* index 24: spectral novelty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Apply Principal Component Analysis to See Which Features Predict the Signal Most"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-4.024665683990886e-09"
+       "-4.1640593931537445e-09"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1061,7 @@
        "    svd_solver='auto', tol=0.0, whiten=True)"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -1084,16 +1098,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 24)"
+       "(2, 25)"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,156 +1118,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 382,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "component_magnitudes = pd.DataFrame(model.components_, index = ['PC-1','PC-2'])\n",
+    "component_magnitudes = abs(component_magnitudes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>PC-1</th>\n",
-       "      <td>-0.260838</td>\n",
-       "      <td>-0.208214</td>\n",
-       "      <td>-0.267103</td>\n",
-       "      <td>0.315148</td>\n",
-       "      <td>-0.163073</td>\n",
-       "      <td>0.004098</td>\n",
-       "      <td>0.106031</td>\n",
-       "      <td>0.034172</td>\n",
-       "      <td>0.306367</td>\n",
-       "      <td>-0.256090</td>\n",
-       "      <td>0.326269</td>\n",
-       "      <td>0.066699</td>\n",
-       "      <td>0.222421</td>\n",
-       "      <td>0.174568</td>\n",
-       "      <td>0.208690</td>\n",
-       "      <td>0.190545</td>\n",
-       "      <td>0.112234</td>\n",
-       "      <td>0.122142</td>\n",
-       "      <td>0.055835</td>\n",
-       "      <td>0.155388</td>\n",
-       "      <td>-0.162199</td>\n",
-       "      <td>-0.299971</td>\n",
-       "      <td>-0.274644</td>\n",
-       "      <td>-0.047774</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PC-2</th>\n",
-       "      <td>0.163501</td>\n",
-       "      <td>-0.296752</td>\n",
-       "      <td>0.049072</td>\n",
-       "      <td>0.243706</td>\n",
-       "      <td>-0.294038</td>\n",
-       "      <td>0.326706</td>\n",
-       "      <td>-0.173676</td>\n",
-       "      <td>0.278562</td>\n",
-       "      <td>-0.015225</td>\n",
-       "      <td>0.065234</td>\n",
-       "      <td>0.048249</td>\n",
-       "      <td>0.074393</td>\n",
-       "      <td>0.104707</td>\n",
-       "      <td>0.012544</td>\n",
-       "      <td>0.171008</td>\n",
-       "      <td>0.062497</td>\n",
-       "      <td>0.087029</td>\n",
-       "      <td>0.001752</td>\n",
-       "      <td>0.020202</td>\n",
-       "      <td>0.032381</td>\n",
-       "      <td>0.468729</td>\n",
-       "      <td>0.099022</td>\n",
-       "      <td>0.325545</td>\n",
-       "      <td>0.348288</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             0         1         2         3         4         5         6  \\\n",
-       "PC-1 -0.260838 -0.208214 -0.267103  0.315148 -0.163073  0.004098  0.106031   \n",
-       "PC-2  0.163501 -0.296752  0.049072  0.243706 -0.294038  0.326706 -0.173676   \n",
-       "\n",
-       "             7         8         9        10        11        12        13  \\\n",
-       "PC-1  0.034172  0.306367 -0.256090  0.326269  0.066699  0.222421  0.174568   \n",
-       "PC-2  0.278562 -0.015225  0.065234  0.048249  0.074393  0.104707  0.012544   \n",
-       "\n",
-       "            14        15        16        17        18        19        20  \\\n",
-       "PC-1  0.208690  0.190545  0.112234  0.122142  0.055835  0.155388 -0.162199   \n",
-       "PC-2  0.171008  0.062497  0.087029  0.001752  0.020202  0.032381  0.468729   \n",
-       "\n",
-       "            21        22        23  \n",
-       "PC-1 -0.299971 -0.274644 -0.047774  \n",
-       "PC-2  0.099022  0.325545  0.348288  "
+       "10    0.324636\n",
+       "3     0.310507\n",
+       "8     0.305975\n",
+       "22    0.298448\n",
+       "23    0.277885\n",
+       "2     0.266958\n",
+       "0     0.265849\n",
+       "9     0.255736\n",
+       "12    0.220609\n",
+       "14    0.206383\n",
+       "1     0.204185\n",
+       "15    0.190076\n",
+       "13    0.173943\n",
+       "21    0.168817\n",
+       "4     0.156559\n",
+       "19    0.153950\n",
+       "17    0.121177\n",
+       "16    0.110883\n",
+       "6     0.109418\n",
+       "20    0.068276\n",
+       "11    0.065134\n",
+       "18    0.056558\n",
+       "24    0.053846\n",
+       "7     0.030598\n",
+       "5     0.001483\n",
+       "Name: PC-1, dtype: float64"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(model.components_, index = ['PC-1','PC-2'])"
+    "component_magnitudes.iloc[0].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21    0.436994\n",
+       "24    0.336268\n",
+       "5     0.318411\n",
+       "4     0.301756\n",
+       "20    0.301418\n",
+       "23    0.290287\n",
+       "1     0.277378\n",
+       "7     0.256386\n",
+       "3     0.243528\n",
+       "0     0.176267\n",
+       "6     0.170599\n",
+       "14    0.161189\n",
+       "12    0.105342\n",
+       "16    0.082757\n",
+       "11    0.073791\n",
+       "22    0.063919\n",
+       "10    0.059751\n",
+       "15    0.058309\n",
+       "9     0.044726\n",
+       "19    0.044056\n",
+       "2     0.035789\n",
+       "13    0.018132\n",
+       "17    0.013713\n",
+       "18    0.008034\n",
+       "8     0.003827\n",
+       "Name: PC-2, dtype: float64"
+      ]
+     },
+     "execution_count": 384,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "component_magnitudes.iloc[1].sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Component 1 depends substantially on MFCCs 4, 9, and 11, while component 2 depends largely on MFCCs 4-6, as well as spectral rolloff and spectral novelty."
+    "For the forest biome's audio:\n",
+    "\n",
+    "Component 1 depends substantially on MFCCs 11, 4, and 9, with lesser but significant contributions made by spectral bandwidth and spectral rolloff. \n",
+    "\n",
+    "Component 2 depends largely on RMS energy, spectral centroid, rolloff, and novelty, as well as MFCCs 5 and 6."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apply Non-Negative Matrix Factorization to Decribe Signal as a Sum of Components"
+    "# Signal Decomposition via Non-Negative Matrix Factorization"
    ]
   },
   {
