added analysis for all four biomes

--- a/feature_extract_forest.ipynb
+++ b/feature_extract_forest.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Feature Extraction (Forest Biome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*all librosa code and feature explanation from the [CCRMA Music Information Retrieval summer intensive github repo](https://github.com/bmcfee/stanford-mir)*"
    ]
   },
@@ -100,15 +107,6 @@
     "# normalize data between 0 and 1 for visualization\n",
     "def normalize(x, axis=0):\n",
     "    return sklearn.preprocessing.minmax_scale(x, axis=axis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# normalize data to mean of 0 and unit variance"
    ]
   },
   {
@@ -364,7 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectral_centroids = librosa.feature.spectral_centroid(x+0.01, sr=sr)[0] # add constant to correct value at silence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 387,
    "metadata": {
     "scrolled": false
    },
@@ -392,7 +399,6 @@
     }
    ],
    "source": [
-    "spectral_centroids = librosa.feature.spectral_centroid(x+0.01, sr=sr)[0] # add constant to correct value at silence\n",
     "librosa.display.waveplot(x, sr=sr, alpha=0.4)\n",
     "plt.plot(t, normalize(spectral_centroids), color='g') # normalize for visualization purposes\n",
     "plt.show()"
@@ -1215,7 +1221,6 @@
     }
    ],
    "source": [
-    "\n",
     "component_magnitudes.iloc[1].sort_values(ascending=False)"
    ]
   },
